tests/errors/types/parameter-as-generic-base.fn
---
Description: A parameter name used as the base of a generic type
Expected: FN3202
---

type Program
{
    static fn Bad(p: i32) -> i32
    {
        var a: p<i32> = 5
        return 0
    }

    static fn Main -> i32
    {
        return Bad(0)
    }
}
